--- a/aint.html
+++ b/aint.html
@@ -147,7 +147,7 @@
 
                             <p>AINT crypto currency is a <a href="https://wavesprotocol.org/" target="_blank">Waves</a> based crypto token 
                             that can be purchased, sent, received, exchanged or sold and used as a mining power unit for 
-                            <a href="/anote">Anote</a>. AINT stands for Anonutopia Infrastructure Token.</p>
+                            <a href="/anote">Anote</a>. AINT stands for <strong>Anonutopia Infrastructure Token</strong>.</p>
 
                             <p><strong>There are 144,000.00 AINTs and they can not be reissued.</strong></p>
 
