--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
                             <li><a href="/pi-comparison">Comparison to PI</a></li>
                         </ul>
                     </li>
+                    <li><a href="/aint">AINT</a></li>
                     <li class="has-dropdown">
                         <a href="/projects">Projects</a>
                         <ul class="dropdown">
