--- a/about.html
+++ b/about.html
@@ -239,6 +239,7 @@
                             <a href="/">Home</a>
                             <a href="/about">About</a>
                             <a href="/anote">Anote</a>
+                            <a href="/aint">AINT</a>
                             <a href="/projects">Projects</a>
                             <a href="/contact">Contact</a>
                         </div>
