--- a/aint.html
+++ b/aint.html
@@ -202,13 +202,12 @@
                     <div class="widget">
                         <h3 class="title">Menu</h3>
                         <div class="widget-category">
-                            <a href="/beginner">Absolute Beginner's Guide</a>
-                            <a href="/anote">About Anote</a>
-                            <a href="/mine">How to Mine?</a>
-                            <a href="/purchase">How to Purchase?</a>
-                            <a href="/anonsrobot">How to Use AnonsRobot?</a>
-                            <a href="/anonshout">How to Use AnonShout?</a>
-                            <a href="/pi-comparison">Comparison to PI</a>
+                            <a href="/">Home</a>
+                            <a href="/about">About</a>
+                            <a href="/anote">Anote</a>
+                            <a href="/aint">AINT</a>
+                            <a href="/projects">Projects</a>
+                            <a href="/contact">Contact</a>
                         </div>
                     </div>
                     
