--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
                     
                     <div class="col-md-10 col-md-offset-1">
                         <div class="home-content">
-                            <h1 class="white-text">Smart Contract Country</h1>
+                            <h1 class="white-text">Tribe in the Cloud</h1>
                             <p class="white-text" style="margin-bottom: 30px;">
-                                Because blockchain's killer app is a smart contract based decentralized Internet country with its own 
-                                cryptocurrencies, universal basic income, ATM network, taxi app, housing app and similar Open Source applications.
+                                We're a group of people from all around the globe building free and Open Source society based on crypto-anarchism,
+                                direct democracy and meritocracy. We're gathered around Anote cryptocurrency, the building block of future society.
                             </p>
                             <a href="/about" class="white-btn"><i class="fa fa-info"></i> Read More</a>
                             <a href="https://t.me/Anonutopia" class="main-btn" target="_blank"><i class="fa fa-globe"></i> Join the Movement</a>
