--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         <div class="home-content">
                             <h1 class="white-text">Tribe in the Cloud</h1>
                             <p class="white-text" style="margin-bottom: 30px;">
-                                We're a group of people from all around the globe building free and Open Source society based on crypto-anarchism,
+                                We're a group of people from all around the globe building free and Open Source society based on freedom, crypto-anarchism,
                                 direct democracy and meritocracy. We're gathered around Anote cryptocurrency, the building block of future society.
                             </p>
                             <a href="/about" class="white-btn"><i class="fa fa-info"></i> Read More</a>
