--- a/mine.html
+++ b/mine.html
@@ -10,7 +10,7 @@
     <meta name="google-site-verification" content="Z6HC-hN3X2QZ3R7IWm6tblZar4bae-VQwLANyhICYOc" />
     <meta name="google-site-verification" content="1Lbth8wmGgjTQ03I8a0ab4Q6wKw5LLIsBqhxmwltIkI" />
 
-    <title>How to Mine Anote? | Anonutopia - A Smart Contract Country</title>
+    <title>How to Mine Anote? | Anonutopia - Tribe in the Cloud</title>
     <meta name="description" content="How to Mine Anote? | Anonutopia is a smart contract country (crypto-country or decentralized autonomous country) with its own currencies, universal basic income and other projects."/>
 
     
@@ -38,7 +38,7 @@
 
     <meta property="og:url"                content="https://www.anonutopia.com/anote/" />
     <meta property="og:type"               content="article" />
-    <meta property="og:title"              content="How to Mine Anote? | Anonutopia - A Smart Contract Country!" />
+    <meta property="og:title"              content="How to Mine Anote? | Anonutopia - Tribe in the Cloud!" />
     <meta property="og:description"        content="How to Mine Anote? | Anonutopia is a smart contract country (crypto-country) with its own cryptocurrencies, universal basic income, ATM network and taxi, housing and similar apps." />
     <meta property="og:image"              content="https://www.anonutopia.com/static/img/fb.png?v=1.0.0" />
 
