--- a/about.html
+++ b/about.html
@@ -146,8 +146,8 @@
                         <div class="blog-content">
 
 
-                            <p>Anonutopia is a smart contract based decentralized Internet country (or crypto-country) with its own cryptocurrencies, 
-                            universal basic income, ATM network, taxi app, housing app and other similar Open Source applications.</p>
+                            <p>Anonutopia is a group of people from all around the globe building Open Source society based on freedom, crypto-anarchism,
+                                direct democracy and meritocracy. We're gathered around Anote cryptocurrency, the building block of future society.</p>
 
                             <p>In a reality, it's a suit of Open Source tools, cryptocurrencies and applications for managing a large group of 
                             people with common interests in a democratic manner.</p>
