--- a/anote.html
+++ b/anote.html
@@ -167,18 +167,9 @@
 
                             <h4><i class="fa fa-link"></i> Anote Referral System</h4>
 
-                            <p>Anote has a referral that is used to build a web of trust, but you can also earn with it.</p>
-
-                            <p>There are two ways to refer somebody to Anote / Anonutopia:</p>
-
-                            <p>
-                                <i class="fa fa-gear"></i>&nbsp;&nbsp;add them to one of our groups - 
-                                <a href="https://t.me/Anonutopia" target="_blank">Anonutopia</a> or <a href="https://t.me/AnonutopiaBalkan" target="_blank">AnonutopiaBalkan</a><br>
-                                <i class="fa fa-gear"></i>&nbsp;&nbsp;send them your referral link which you can get if you enter /status command using 
-                                <a href="https://t.me/AnonsRobot" target="_blank" class="robot">AnonsRobot</a>
+                            <p>Anote has a referral that is used to build a web of trust, but you can also earn with it. You can invite people to Anonutopia
+                                by sending them a link or a message that you get if you send "/ref" command to <a href="https://t.me/AnonsRobot" target="_blank" class="robot">AnonsRobot</a>.
                             </p>
-
-                            <p>If one of your referred users purchases Anote for Waves (creates new denominations), you get 20%.</p>
 
                             <p>You can read more about referral system and mining in our <a href="/mine">mining tutorial</a>.</p>
 
