--- a/mine.html
+++ b/mine.html
@@ -189,6 +189,10 @@
                                 <a href="https://t.me/AnonsRobot" target="_blank" class="robot">AnonsRobot</a>
                             </p>
 
+                            <h4><i class="fa fa-bolt"></i> Purchase Mining Power</h4>
+
+                            <p>You can purchase Anote mining power and add it to your basic mining power. Read more about that <a href="/aint">here</a>.</p>
+
                         </div>
                     </div>
 
