--- a/anonsrobot.html
+++ b/anonsrobot.html
@@ -159,9 +159,9 @@
                                 and you're registered and get a "Dissident" status.
                             </p>
 
-                            <h4>/price</h4>
+                            <h4>/info</h4>
 
-                            <p>Price command returns current Anote price in case somebody is purchasing it with Waves.</p>
+                            <p>Info command provides general information on Anote, like price, total mining power on the network etc.</p>
 
                             <h4>/address</h4>
 
@@ -191,13 +191,17 @@
 
                             <p>This command informs you about the currently highest bid for ad on AnonShout channel for tomorrow.</p>
 
+                            <h4>/shoutedit</h4>
+
+                            <p>Allows you to edit your AnonShout ad message and link.</p>
+
                             <h4>/nick</h4>
 
                             <p>Use this command to setup your Anonutopia / Anote nickname.</p>
 
                             <h4>/ref</h4>
 
-                            <p>Use somebody's nickname / referral code to setup your referral manually.</p>
+                            <p>Shows your referring message and links.</p>
 
                             <h4>/team</h4>
 
