--- a/purchase.html
+++ b/purchase.html
@@ -167,7 +167,7 @@
                             <h4>Calculator</h4>
 
                             <p><a href="https://t.me/AnonsRobot" target="_blank" class="robot">AnonsRobot</a> has a built in calculator command (/calculate). You 
-                            just send it amount of waves you're planning to invest and it will return amount of anotes you are going to receive.</p>
+                            just send it amount of EUR you're planning to invest and it will return amount of anotes you are going to receive.</p>
 
                             <br>
 
