--- a/mine.html
+++ b/mine.html
@@ -180,14 +180,8 @@
                             power becomes 0.45 anotes per hour.
                             </p>
 
-                            <p>There are two ways to refer somebody to Anote / Anonutopia:</p>
-
-                            <p>
-                                <i class="fa fa-gear"></i>&nbsp;&nbsp;add them to one of our groups - 
-                                <a href="https://t.me/Anonutopia" target="_blank">Anonutopia</a> or <a href="https://t.me/AnonutopiaBalkan" target="_blank">AnonutopiaBalkan</a><br>
-                                <i class="fa fa-gear"></i>&nbsp;&nbsp;send them your referral link which you can get if you enter /status command using 
-                                <a href="https://t.me/AnonsRobot" target="_blank" class="robot">AnonsRobot</a>
-                            </p>
+                            <p>You can invite people to Anonutopia by sending them a link or a message that you get if you send "/ref" command to
+                            <a href="https://t.me/AnonsRobot" target="_blank" class="robot">AnonsRobot</a>.</p>
 
                             <h4><i class="fa fa-bolt"></i> Purchase Mining Power</h4>
 
