--- a/mine.html
+++ b/mine.html
@@ -183,7 +183,7 @@
                             <p>You can invite people to Anonutopia by sending them a link or a message that you get if you send "/ref" command to
                             <a href="https://t.me/AnonsRobot" target="_blank" class="robot">AnonsRobot</a>.</p>
 
-                            <h4><i class="fa fa-bolt"></i> Purchase Mining Power</h4>
+                            <h4><i class="fa fa-credit-card"></i> Purchase Mining Power</h4>
 
                             <p>You can purchase Anote mining power and add it to your basic mining power. Read more about that <a href="/aint">here</a>.</p>
 
