--- a/black-paper.html
+++ b/black-paper.html
@@ -157,7 +157,41 @@
 
                             <h3>Anonutopia Black Paper</h3>
 
-                            <p>Preface Todo.</p>
+                            <p>In crypto-anarchist movement there's a need for a building block of the free society of the future, a tool for 
+                            self-governing and self-organization of people developing projects on a large scale without the need of third party
+                            entity like country or company. Anote aims to be that tool with Anonutopia as a top level decentralized organization
+                            watching over the project by using the Anote itself as a tool to do it.</p>
+
+                            <p>Anonutopia's goal is to create a self-sustainable ecosystem with its own currencies, infrastructure that runs those 
+                            currencies, built-in customer support, community that decides about the project in a democratic manner and incentives 
+                            for the developers to fullfil the needs of the community.</p>
+
+                            <p>After that basic goal is reached, we will develop apps and services on our decentralized infrastructure and provide 
+                            jobs. Apps like Uber (AnonTaxi), AirBnb, delivery app, decentralized software development agency etc.</p>
+
+                            <p>Development of these projects will be financed by utilizing Anonutopia's first commercial project - AnonShout, a 
+                            Telegram ads channel network and bot for auctioning for ads on that network, using Anote, of course. The process of mining
+                            itself is done by watching the ads.</p>
+
+                            <p>Anonutopia uses mature and well tested technologies and projects. Our main tool for communication and user interface is 
+                            Telegram Messenger and our cryptocurrency technology is Waves Platform. In the future, we will probably need to create our
+                            own versions of those parts of the infrastructure. We use Telegram bots to communicate with Waves blockchain and that makes
+                            us almost unstoppable right from the start.</p>
+
+                            <p><strong><u>What we're aiming for is a better version of Bitcoin. One that is:</u></strong></p>
+
+                            <p>
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;<strong>Fast</strong><br>
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;<strong>Cheap</strong><br>
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;<strong>Ecologically sustainable</strong><br>
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;<strong>Stable</strong><br>
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;<strong>Growing steadily</strong><br>
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;<strong>Has a built-in support</strong><br>
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;<strong>Has decentralized and independent infrastructure</strong><br>
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;<strong>Has built-in incentive for development</strong><br>
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;<strong>Has built-in funding</strong><br>
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;<strong>Led democratically by the people who use it</strong><br>
+                            </p>
 
                             <h4>Anote</h4>
 
@@ -166,6 +200,18 @@
                             <h4>AINT - Anonutopia Infrastructure Token</h4>
 
                             <p>AINT Todo</p>
+
+                            <h4>AnonShout</h4>
+
+                            <p>AnonShout Todo</p>
+
+                            <h4>AnonHelper</h4>
+
+                            <p>AnonHelper Todo</p>
+
+                            <h4>AnonCMS</h4>
+
+                            <p>AnonCMS Todo</p>
 
                         </div>
                     </div>
