--- a/black-paper.html
+++ b/black-paper.html
@@ -170,7 +170,7 @@
                             jobs. Apps like Uber (AnonTaxi), AirBnb, delivery app, decentralized software development agency etc.</p>
 
                             <p>Development of these projects will be financed by utilizing Anonutopia's first commercial project - AnonShout, a 
-                            Telegram ads channel network and bot for auctioning for ads on that network, using Anote, of course. The process of mining
+                            Telegram ads channel network and bot for auctioning ads on that network, using Anote, of course. The process of mining
                             itself is done by watching the ads.</p>
 
                             <p>Anonutopia uses mature and well tested technologies and projects. Our main tool for communication and user interface is 
@@ -186,7 +186,7 @@
                                 <i class="fa fa-check"></i>&nbsp;&nbsp;<strong>Ecologically sustainable</strong><br>
                                 <i class="fa fa-check"></i>&nbsp;&nbsp;<strong>Stable</strong><br>
                                 <i class="fa fa-check"></i>&nbsp;&nbsp;<strong>Growing steadily</strong><br>
-                                <i class="fa fa-check"></i>&nbsp;&nbsp;<strong>Has a built-in support</strong><br>
+                                <i class="fa fa-check"></i>&nbsp;&nbsp;<strong>Has a built-in support and education</strong><br>
                                 <i class="fa fa-check"></i>&nbsp;&nbsp;<strong>Has decentralized and independent infrastructure</strong><br>
                                 <i class="fa fa-check"></i>&nbsp;&nbsp;<strong>Has built-in incentive for development</strong><br>
                                 <i class="fa fa-check"></i>&nbsp;&nbsp;<strong>Has built-in funding</strong><br>
@@ -212,6 +212,22 @@
                             <h4>AnonCMS</h4>
 
                             <p>AnonCMS Todo</p>
+
+                            <h4>AnonDevs</h4>
+
+                            <p>AnonDevs Todo</p>
+
+                            <h4>AnonExchange</h4>
+
+                            <p>AnonExchange Todo</p>
+
+                            <h4>Telegram</h4>
+
+                            <p>Telegram Todo</p>
+
+                            <h4>Token Distribution</h4>
+
+                            <p>Token Distribution Todo</p>
 
                         </div>
                     </div>
