--- a/black-paper.html
+++ b/black-paper.html
@@ -151,7 +151,7 @@
                                 <p class="mb-0 mt-2 font-italic" style="margin-bottom: 0;"><strong>White knights in shiny armour, that's a false narrative. We are the darkness!</strong></p>
                                 <div class="blockquote-custom-icon shadow-sm" style="text-align: right;"><i class="fa fa-quote-right text-white"></i></div>
                                 <footer class="blockquote-footer pt-4 mt-4 border-top" style="margin-top: -10px;">Amir Taaki,
-                                    <cite title="Source Title">former Bitcoin programmer and revolutionary crypto-anarchist hacker</cite>
+                                    <cite title="Source Title">former Bitcoin developer and revolutionary crypto-anarchist hacker</cite>
                                 </footer>
                             </blockquote><!-- END -->
 
@@ -163,7 +163,7 @@
                             watching over the project by using the Anote itself as a tool to do it.</p>
 
                             <p>Anonutopia's goal is to create a self-sustainable ecosystem with its own currencies, infrastructure that runs those 
-                            currencies, built-in customer support, community that decides about the project in a democratic manner and incentives 
+                            currencies, built-in user support, community that decides about the project in a democratic manner and incentives 
                             for the developers to fullfil the needs of the community.</p>
 
                             <p>After that basic goal is reached, we will develop apps and services on our decentralized infrastructure and provide 
@@ -195,11 +195,45 @@
 
                             <h4>Anote</h4>
 
-                            <p>About Anote Todo</p>
+                            <p>Anote is a Waves based cryptocurrency and that solves first three issues we wanted to solve (fast, cheap, ecologically 
+                            sustainable). It's mined by paying attention to ads published on Telegram channels and that determines your mining power,
+                            number of anotes you get in some amount of time.</p>
+                            
+                            <p>Tests have shown that lowering mining power to all participants makes the price on the exchanges rise and the other 
+                            way around. This with the combination of value provided by purchased mining power (AINTs) and ads network channel to 
+                            generate demand with Anote auctions gives as a simple mechanism for keeping Anote stable and growing steadily.</p>
+
+                            <p>Anote is an educational cryptocurrency and the main token for paying for apps and services in Anonutopia.</p>
 
                             <h4>AINT - Anonutopia Infrastructure Token</h4>
 
-                            <p>AINT Todo</p>
+                            <p>While Anote's role is paying for services and apps and storing and exchanging value, AINT (Anonutopia Infrastructure
+                            Token) has a multiple role:</p>
+
+                            <p>
+                                <i class="fa fa-circle-o"></i>&nbsp;&nbsp;Proof of stake token<br>
+                                <i class="fa fa-circle-o"></i>&nbsp;&nbsp;Mining power unit<br>
+                                <i class="fa fa-circle-o"></i>&nbsp;&nbsp;Speculative token<br>
+                                <i class="fa fa-circle-o"></i>&nbsp;&nbsp;Infrastructure token<br>
+                                <i class="fa fa-circle-o"></i>&nbsp;&nbsp;Crowdfunding token<br>
+                            </p>
+
+                            <p>Since it's much more complicated ecosystem than Bitcoin, the community will have to have a way to know how much they can
+                            trust somebody, for example, person running a node. And since it's also a crowdfunding token, it can only be purchased and 
+                            it's limited to 144.000. So if somebody purchases it, he will invest in the project and we can expect he will want good for
+                            the project. That's proof of stake, in a nutshell.</p>
+
+                            <p>It's also a mining power unit. You can purchase it and 1 AINT will give you 1 more anote per hour.</p>
+
+                            <p>Because it's limited to very low amount, it's almost certain it will grow insanely and also fluctuate in price which will
+                            make it a good speculative token.</p>
+
+                            <p>By the principle of PoS (Proof of Stake), every important part of our infrastructure will be maintained and provided
+                            exclusively by the people who own AINTs. That makes it an infrastructure token.</p>
+
+                            <p>Part of AINTs will be used as a crowdfunding token for developing all the tools described here to the MVP (Minimum Viable
+                            Product) version, to kickstart development of commercials apps and services and to finish complete and total decentralization.
+                            At this point, we're half way there. You can read more on AINTs distribution lower in the paper.</p>
 
                             <h4>AnonShout</h4>
 
@@ -228,6 +262,8 @@
                             <h4>Token Distribution</h4>
 
                             <p>Token Distribution Todo</p>
+
+                            <p style="text-align: right;">Pragmatic, Somewhere in the Balkans, 20.10.2020.</p>
 
                         </div>
                     </div>
