--- a/black-paper.html
+++ b/black-paper.html
@@ -208,7 +208,7 @@
                             <h4>AINT - Anonutopia Infrastructure Token</h4>
 
                             <p>While Anote's role is paying for services and apps and storing and exchanging value, AINT (Anonutopia Infrastructure
-                            Token) has a multiple role:</p>
+                            Token) has multiple roles:</p>
 
                             <p>
                                 <i class="fa fa-circle-o"></i>&nbsp;&nbsp;Proof of stake token<br>
@@ -237,15 +237,26 @@
 
                             <h4>AnonShout</h4>
 
-                            <p>AnonShout Todo</p>
+                            <p>AnonShout is Anonutopia's built in Telegram channel network for serving ads. Currently it has only one channel, but it will
+                            be expanded by countries, interests etc. Ads on AnonShout are purchased through auctions done with anotes and this creates a 
+                            deflation in the system. Watching ads on the channel rewards the miners with anotes.</p>
+
+                            <p>Telegram channels are a great and cheap way of advertising. But they currently have an issue of connecting advertisers with 
+                            channel owners. AnonShout aims to resolve this issue too. Its Telegram bot will provide channel owners with a feature to add their channel
+                            into network and advertisers will get a single point of advertising on a large network of channels. This has a potential to generate
+                            a huge demand on the Anote.</p>
 
                             <h4>AnonHelper</h4>
 
-                            <p>AnonHelper Todo</p>
+                            <p>AnonHelper is a built-in user support system for Anonutopia and all connected to it. It has a Telegram group of people willing
+                            to help other people and its own bot. If somebody needs a help, he asks for it and bot will send a notification in the group.
+                            Anybody in the group can take over the conversation and if user on the other side is satisfied, helper will be rewarded with anotes.</p>
+
+                            <p>AnonHelper bot will also have automated tutorials and challenges that will be rewarded with anotes for educational purposes.</p>
 
                             <h4>AnonCMS</h4>
 
-                            <p>AnonCMS Todo</p>
+                            <p>AnonCMS is a built-in tool for maintaining all Anonutopia websites utilizing Telegram and GitHub. </p>
 
                             <h4>AnonDevs</h4>
 
