--- a/black-paper.html
+++ b/black-paper.html
@@ -256,7 +256,12 @@
 
                             <h4>AnonCMS</h4>
 
-                            <p>AnonCMS is a built-in tool for maintaining all Anonutopia websites utilizing Telegram and GitHub. </p>
+                            <p>AnonCMS is a built-in tool for maintaining all Anonutopia websites utilizing Telegram and GitHub. It has a Telegram group of 
+                            webmasters willing to do simple tasks for anotes and its own Telegram bot. When developers or community request a change on one of
+                            the websites, bot will send a notification to the group, one of webmasters will accept it, resolve it with GitHub pull request and 
+                            if community accepts it, he will be rewarded with anotes.</p>
+
+                            <p>This service will also automatically be offered commercially too, for simple website maintenance.</p>
 
                             <h4>AnonDevs</h4>
 
