--- a/black-paper.html
+++ b/black-paper.html
@@ -248,7 +248,7 @@
 
                             <h4>AnonHelper</h4>
 
-                            <p>AnonHelper is a built-in user support system for Anonutopia and all connected to it. It has a Telegram group of people willing
+                            <p>AnonHelper is a built-in user support system for Anonutopia and everything connected to it. It has a Telegram group of people willing
                             to help other people and its own bot. If somebody needs a help, he asks for it and bot will send a notification in the group.
                             Anybody in the group can take over the conversation and if user on the other side is satisfied, helper will be rewarded with anotes.</p>
 
