--- a/black-paper.html
+++ b/black-paper.html
@@ -252,7 +252,8 @@
                             to help other people and its own bot. If somebody needs a help, he asks for it and bot will send a notification in the group.
                             Anybody in the group can take over the conversation and if user on the other side is satisfied, helper will be rewarded with anotes.</p>
 
-                            <p>AnonHelper bot will also have automated tutorials and challenges that will be rewarded with anotes for educational purposes.</p>
+                            <p>AnonHelper bot will also have automated tutorials and challenges that will be rewarded with anotes for educational purposes and 
+                            it can be used commercially right from the start to provide simple customer support for the companies.</p>
 
                             <h4>AnonCMS</h4>
 
