--- a/black-paper.html
+++ b/black-paper.html
@@ -266,15 +266,29 @@
 
                             <h4>AnonDevs</h4>
 
-                            <p>AnonDevs Todo</p>
+                            <p>This is a built-in system for Anonutopia development. It also has a bot of its own and when community decides they want some 
+                            feature implemented, the bot will notify the Telegram group of developers, one of them will accept it, resolve it and if community 
+                            accepts GitHub pull request, the developer will be rewarded with some amount of anotes.</p>
+
+                            <p>This service might grow into self-sustainable decentralized software development agency.</p>
 
                             <h4>AnonExchange</h4>
 
-                            <p>AnonExchange Todo</p>
+                            <p>Since buying and selling cryptocurrencies for "real" money is currently still an issue, AnonExchange aims to resolve it. It will 
+                            be a built in decentralized exchange where anybody will be able to make a request for exchange for his local bank account and Telegram
+                            bot will notify a group of people working with the exchange who will resolve the trade for them. These will be trusted people and 
+                            this is where AINT comes in particularly handy as a proof of stake token.</p>
 
-                            <h4>Telegram</h4>
+                            <p>This will have to be a "side job" because we'll have to keep amounts low in order not to alert the banks since they've proven
+                            that they don't like cryptocurrencies.</p>
 
-                            <p>Telegram Todo</p>
+                            <h4>Telegram and GitHub</h4>
+
+                            <p>Telegram and GitHub are heavily used in Anonutopia. Telegram is used through a network of chat bots, groups and channels and 
+                            particularly for communication, discussions and direct democracy.</p>
+
+                            <p>GitHub is used for storing all our Open Source code and our websites and it's deeply integrated with some of our services 
+                            like AnonCMS and AnonDevs.</p>
 
                             <h4>Token Distribution</h4>
 
