--- a/black-paper.html
+++ b/black-paper.html
@@ -280,7 +280,7 @@
                             this is where AINT comes in particularly handy as a proof of stake token.</p>
 
                             <p>This will have to be a "side job" because we'll have to keep amounts low in order not to alert the banks since they've proven
-                            that they don't like cryptocurrencies.</p>
+                            that they don't like cryptocurrencies. However, this is perfectly legal.</p>
 
                             <h4>Telegram and GitHub</h4>
 
@@ -289,6 +289,8 @@
 
                             <p>GitHub is used for storing all our Open Source code and our websites and it's deeply integrated with some of our services 
                             like AnonCMS and AnonDevs.</p>
+
+                            <h4>Stablecoins</h4>
 
                             <h4>Token Distribution</h4>
 
