--- a/black-paper.html
+++ b/black-paper.html
@@ -290,6 +290,9 @@
                             <p>GitHub is used for storing all our Open Source code and our websites and it's deeply integrated with some of our services 
                             like AnonCMS and AnonDevs.</p>
 
+                            <p>At some point, it might be good to put those parts of our infrastructure under our control too, to create a decentralized 
+                            version of GitHub of our own and fork Waves and Telegram in a community versions.</p>
+
                             <h4>Stablecoins</h4>
 
                             <h4>Token Distribution</h4>
