--- a/black-paper.html
+++ b/black-paper.html
@@ -295,6 +295,11 @@
 
                             <h4>Stablecoins</h4>
 
+                            <p>Anote is a payment cryptocurrency, but also an educational token. One of its purposes is to educate its users about 
+                            stablecoins like Neutrino and the fact that they can get 10-20% of annual interest on their money, paid daily. Using AnonExchange, 
+                            Anonutopia will also make it easier to exchange fiat to stablecoins and the other way around and it will provide a Telegram
+                            bot for easier loading to most popular crypto debit cards.</p>
+
                             <h4>Token Distribution</h4>
 
                             <p>Token Distribution Todo</p>
