--- a/black-paper.html
+++ b/black-paper.html
@@ -300,11 +300,34 @@
                             Anonutopia will also make it easier to exchange fiat to stablecoins and the other way around and it will provide a Telegram
                             bot for easier loading to most popular crypto debit cards.</p>
 
-                            <h4>Token Distribution</h4>
+                            <h4>Token Mechanics</h4>
 
-                            <p>Token Distribution Todo</p>
+                            <p>For token distribution details, please check transparency page. This part is about the mechanics and algorithms of Anote
+                            and AINT.</p>
 
-                            <p style="text-align: right;">Pragmatic, Somewhere in the Balkans, 20.10.2020.</p>
+                            <p>Anote is simple, it is mined in more than one way and we're planning to do so forever, only mining power will change. 
+                            That's why it can be reissued. However, that doesn't mean somebody can just take those anotes. There are rules for anote 
+                            distribution and those rules are determined and secured by the network and smart contracts. Its price is programmed to be 
+                            stable and grow steadily by the mechanisms described in Anote part of this document.</p>
+
+                            <p>AINT on the other hand is premined and limited to 144 thousands, with 8 decimal places and this is how we distribute it:</p>
+
+                            <p>
+                                <i class="fa fa-circle-o"></i>&nbsp;&nbsp;1.000 AINTs for regular mining users<br>
+                                <i class="fa fa-circle-o"></i>&nbsp;&nbsp;3.000 AINTs for core crowdfunding<br>
+                                <i class="fa fa-circle-o"></i>&nbsp;&nbsp;40.000 AINTs for apps crowdfunding<br>
+                                <i class="fa fa-circle-o"></i>&nbsp;&nbsp;100.000 AINTs for Anote stabilization<br>
+                            </p>
+
+                            <p>First tier will be left aside for regular mininig users. In the future, every user will need to have at least 0.00000001 AINT
+                            in order to withdraw his or her anotes. Second tier is for crowdfunding tools described in this paper. Third tier is for funding
+                            apps that will provide jobs and economy and last tier is self-explanatory.</p>
+
+                            <p>If you want to see details about how AINT price is calculated and what's the current price, you can get that information on 
+                            the AINT page.
+                            </p>
+
+                            <p style="text-align: right; margin-top: 40px;">Pragmatic, Somewhere in the Balkans, 20.10.2020.</p>
 
                         </div>
                     </div>
