--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 
                 <ul class="main-nav nav navbar-nav navbar-right" id="main-nav">
 					<li><a href="/">Home</a></li>
-					<li><a href="/about">About</a></li>
+					<li><a href="/black-paper">Black Paper</a></li>
                     <li class="has-dropdown">
                         <a href="/anote">Anote</a>
                         <ul class="dropdown">
@@ -120,7 +120,7 @@
                                 We're a group of people from all around the globe building Open Source society based on freedom, crypto-anarchism,
                                 direct democracy and meritocracy. We're gathered around Anote cryptocurrency, the building block of future society.
                             </p>
-                            <a href="/about" class="white-btn"><i class="fa fa-info"></i> Read More</a>
+                            <a href="/black-paper" class="white-btn"><i class="fa fa-info"></i> Read More</a>
                             <a href="https://t.me/Anonutopia" class="main-btn" target="_blank"><i class="fa fa-globe"></i> Join the Movement</a>
                         </div>
                     </div>
@@ -177,7 +177,7 @@
 						<i class="fa fa-globe"></i>
 						<h3>Provide the Alternative</h3>
 						<p>Provide the alternative to current countries, banking and monetary systems and economy in general.</p>
-						<a href="/about">More on Anonutopia</a>
+						<a href="/black-paper">More on Anonutopia</a>
 					</div>
 				</div>
 				
