--- a/black-paper.html
+++ b/black-paper.html
@@ -201,7 +201,7 @@
                             
                             <p>Tests have shown that lowering mining power to all participants makes the price on the exchanges rise and the other 
                             way around. This with the combination of value provided by purchased mining power (AINTs) and ads network channel to 
-                            generate demand with Anote auctions gives as a simple mechanism for keeping Anote stable and growing steadily.</p>
+                            generate demand with Anote auctions gives us a simple mechanism for keeping Anote stable and growing steadily.</p>
 
                             <p>Anote is an educational cryptocurrency and the main token for paying for apps and services in Anonutopia.</p>
 
