--- a/quests.html
+++ b/quests.html
@@ -116,10 +116,10 @@
         
         <div class="header-wrapper sm-padding bg-dark">
             <div class="container">
-                <h2>What is Anote?</h2>
+                <h2>Anote Quests</h2>
                 <ul class="breadcrumb">
                     <li class="breadcrumb-item"><a href="/">Home</a></li>
-                    <li class="breadcrumb-item active">Anote</li>
+                    <li class="breadcrumb-item active">Quests</li>
                 </ul>
             </div>
         </div>
@@ -144,68 +144,9 @@
                             <img class="img-responsive" src="./static/img/anote_logo.png" alt=""><br>
                         </div>
                         <div class="blog-content">
-                            <h3>Anote Crypto Currency</h3>
+                            <h3>Facebook Quest</h3>
 
-                            <p>Anote crypto currency is a <a href="https://wavesprotocol.org/" target="_blank">Waves</a> based crypto token that can be mined, 
-                            sent, received, exchanged or sold and used right from the start to purchase ads on our Telegram ad channel - 
-                            <a href="https://t.me/AnonShout">AnonShout</a>. This is also what gives it value right away because you can only purchase 
-                            ads on AnonShout by using anotes. You can read more about AnonShout <a href="/anonshout">here</a>. Anote  
-                            uses these two apps for mining and wallet:</p>
-
-                            <p>
-                                <i class="fa fa-gear"></i>&nbsp;&nbsp;<a href="https://telegram.org/" target="_blank">Telegram Instant Messenger</a><br>
-                                <i class="fa fa-gear"></i>&nbsp;&nbsp;<a href="https://waves.exchange?ref=3PAQasKMCWsofdcCTTEh98KUPz9TGfbJ7CY" target="_blank">Waves Wallet</a>
-                            </p>
-
-                            <p>It will be expanded with new ways to spend it, it's not just mining and marketing, it's also an 
-                                educational token with a mission to educate people how to use crypto (send, receive, exchange, ...) 
-                                and to show them projects like <a href="https://beta.neutrino.at/" target="_blank">Neutrino</a> 
-                                in order to democratize monetary systems and break the banking monopoly. It's designed to bring 
-                                crypto to ordinary people.</p>
-
-                            <p>It is also a main currency of Anonutopia, smart contract country.</p>
-
-                            <h4><i class="fa fa-link"></i> Anote Referral System</h4>
-
-                            <p>Anote has a referral that is used to build a web of trust, but you can also earn with it. You can invite people to Anonutopia
-                                by sending them a link or a message that you get if you send "/ref" command to <a href="https://t.me/AnonsRobot" target="_blank" class="robot">AnonsRobot</a>.
-                            </p>
-
-                            <p>You can read more about referral system and mining in our <a href="/mine">mining tutorial</a>.</p>
-
-                            <h4><i class="fa fa-check"></i> Compared to PI</h4>
-
-                            <p>Anote is a <a href="https://wavesprotocol.org/" target="_blank">Waves</a> based token, 
-                                similar to <a href="https://minepi.com/" target="_blank">PI</a>, but with few major differences:
-                            </p>
-                            
-                            <p>
-                                <i class="fa fa-gear"></i>&nbsp;&nbsp;it's a Waves token so it's fully functional 
-                                right away - you can send it, receive it, exchange it etc.<br>
-                                <i class="fa fa-gear"></i>&nbsp;&nbsp;it's mined by subscribing to our 
-                                <a href="https://telegram.org/" target="_blank">Telegram</a> ad channels and that's 
-                                what gives it value right away<br>
-                                <i class="fa fa-gear"></i>&nbsp;&nbsp;it uses Telegram and 
-                                <a href="https://waves.exchange?ref=3PAQasKMCWsofdcCTTEh98KUPz9TGfbJ7CY" target="_blank">Waves wallet</a> 
-                                which are both mature projects so you can be sure nobody is spying
-                            </p>
-
-                            <h4><i class="fa fa-tag"></i> Anote / Anonutopia Status Tags</h4>
-
-                            <p>When you register with Anonutopia and start mining and being part of the community, you can get 
-                            one of these status tags:</p>
-
-                            <p>
-                                <i class="fa fa-tag"></i>&nbsp;&nbsp;Guest<br>
-                                <i class="fa fa-tag"></i>&nbsp;&nbsp;Dissident<br>
-                                <i class="fa fa-tag"></i>&nbsp;&nbsp;Pioneer<br>
-                                <i class="fa fa-tag"></i>&nbsp;&nbsp;Miner<br>
-                            </p>
-
-                            <p>If you don't register your Waves address, you're a "Guest", otherwise you're a "Dissident". But if you start mining, 
-                            you become "Pioneer". However, if you add more than 3 people to Anonutopia, you become a "Miner" and your mining power gets multiplied by 10.</p>
-
-                            <p>You can read more about referral system and mining in our <a href="/mine">mining tutorial</a>.</p>
+                            <p>Todo</p>
 
                         </div>
                     </div>
