--- a/quests.html
+++ b/quests.html
@@ -10,8 +10,8 @@
     <meta name="google-site-verification" content="Z6HC-hN3X2QZ3R7IWm6tblZar4bae-VQwLANyhICYOc" />
     <meta name="google-site-verification" content="1Lbth8wmGgjTQ03I8a0ab4Q6wKw5LLIsBqhxmwltIkI" />
 
-    <title>Anote Crypto Currency | Anonutopia - Tribe in the Cloud</title>
-    <meta name="description" content="Anote Crypto Currency | Anonutopia is a smart contract country (crypto-country or decentralized autonomous country) with its own currencies, universal basic income and other projects."/>
+    <title>Anote Quests | Anonutopia - Tribe in the Cloud</title>
+    <meta name="description" content="Anote Quests | Anonutopia is a smart contract country (crypto-country or decentralized autonomous country) with its own currencies, universal basic income and other projects."/>
 
     
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700%7CVarela+Round" rel="stylesheet">
@@ -38,8 +38,8 @@
 
     <meta property="og:url"                content="https://www.anonutopia.com/anote/" />
     <meta property="og:type"               content="article" />
-    <meta property="og:title"              content="What is Anote? | Anonutopia - Tribe in the Cloud!" />
-    <meta property="og:description"        content="What is Anote? | Anonutopia is a smart contract country (crypto-country) with its own cryptocurrencies, universal basic income, ATM network and taxi, housing and similar apps." />
+    <meta property="og:title"              content="Anote Quests | Anonutopia - Tribe in the Cloud!" />
+    <meta property="og:description"        content="Anote Quests | Anonutopia is a smart contract country (crypto-country) with its own cryptocurrencies, universal basic income, ATM network and taxi, housing and similar apps." />
     <meta property="og:image"              content="https://www.anonutopia.com/static/img/fb.png?v=1.0.0" />
 
     <script type="text/javascript">
