--- a/about.html
+++ b/about.html
@@ -95,6 +95,7 @@
                             <li><a href="/anonsrobot">AnonsRobot Tutorial</a></li>
                             <li><a href="/anonshout">AnonShout Tutorial</a></li>
                             <li><a href="/pi-comparison">Comparison to PI</a></li>
+                            <li><a href="/quests">Anote Quests</a></li>
                         </ul>
                     </li>
                     <li><a href="/aint">AINT</a></li>
