--- a/anonshout.html
+++ b/anonshout.html
@@ -187,6 +187,7 @@
                             <a href="/anonsrobot">How to Use AnonsRobot?</a>
                             <a href="/anonshout">How to Use AnonShout?</a>
                             <a href="/pi-comparison">Comparison to PI</a>
+                            <a href="/quests">Anote Quests</a>
                         </div>
                     </div>
                     
